--- a/html/tools.html
+++ b/html/tools.html
@@ -28,8 +28,14 @@
             <a href="signup.html" class="authButton">signup</a>
         </div>
     </header>
-    <div>
-        
+    <div class="centeredRow">
+        <div class="gridTools">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </div>
+  
 </body>
 </html>
