--- a/html/tools.html
+++ b/html/tools.html
@@ -34,6 +34,9 @@
             <div></div>
             <div></div>
             <div></div>
+            <div>
+                <div id="centerToolsCircle"></div>
+            </div>
         </div>
     </div>
   
