Tools page final touches
Structure of Tool page is complete

--- a/html/tools.html
+++ b/html/tools.html
@@ -30,10 +30,27 @@
     </header>
     <div class="centeredRow">
         <div class="gridTools">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="cornerTool">
+                <!-- <img src="../resources/images/metronome.gif" alt="Moving metronome" class="toolGif"> -->
+                <img src="../resources/images/static-metronome.png" alt="static-metronome" class="staticToolImg">
+                <p class="centeredText lightText normal showOnHover">Count your words find out your pace and Improve upon it</p>
+                <a href="train.html"  class="authButton noMarginRecord">Record</a>
+            </div>
+            <div class="cornerTool" > 
+                <img src="../resources/images/static-metronome.png" alt="static-metronome" class="staticToolImg">
+                <p class="centeredText lightText normal showOnHover">Count your words find out your pace and Improve upon it</p>
+                <a href="train.html"  class="authButton noMarginRecord">Record</a>
+            </div>
+            <div class="cornerTool">
+                <img src="../resources/images/static-metronome.png" alt="static-metronome" class="staticToolImg">
+                <p class="centeredText lightText normal showOnHover">Count your words find out your pace and Improve upon it</p>
+                <a href="train.html"  class="authButton noMarginRecord">Record</a>
+            </div>
+            <div class="cornerTool">
+                <img src="../resources/images/static-metronome.png" alt="static-metronome" class="staticToolImg">
+                <p class="centeredText lightText normal showOnHover">Count your words find out your pace and Improve upon it</p>
+                <a href="train.html"  class="authButton noMarginRecord">Record</a>
+            </div>
             <div>
                 <div id="centerToolsCircle"></div>
             </div>
