--- a/html/signup.html
+++ b/html/signup.html
@@ -27,6 +27,20 @@
             <a href="login.html" class="authButton">login</a>
         </div>
     </header>
-    <form action=""></form>
+    <div class="centeredRow verticalRow">
+    
+        <form action="submit" class="authForms">
+            <h1 class="centeredText">Signup to Addemly</h1>
+        <img src="../resources/svgs/logo.svg" alt="logo Image" id="logo">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email">
+            <label for="password"> password</label>
+            <input type="password" name="password" id="password">
+            <input type="submit" name="signup" id="signup" value="Signup">
+        </form>
+    </div>
+   
 </body>
 </html>
