--- a/html/login.html
+++ b/html/login.html
@@ -24,16 +24,14 @@
         </ul>
         </div>
         <div class="authButtons">
-            <a href="login.html" class="authButton">login</a>
+            <a href="signup.html" class="authButton">signup</a>
         </div>
     </header>
     <div class="centeredRow verticalRow">
     
         <form action="submit" class="authForms">
-            <h1 class="centeredText">Signup to Addemly</h1>
+            <h1 class="centeredText">Login to Addemly</h1>
         <img src="../resources/svgs/logo.svg" alt="logo Image" id="logo">
-            <label for="name">Name</label>
-            <input type="text" name="name" id="name">
             <label for="email">Email</label>
             <input type="email" name="email" id="email">
             <label for="password"> password</label>
