--- a/html/login.html
+++ b/html/login.html
@@ -36,7 +36,7 @@
             <input type="email" name="email" id="email">
             <label for="password"> password</label>
             <input type="password" name="password" id="password">
-            <input type="submit" name="signup" id="signup" value="Signup">
+            <input type="submit" name="signup" id="signup" value="Login">
         </form>
     </div>
     <script src="../js/signup.js"></script>
