added login Handling
login state is saved and session is  not terminated

--- a/html/tools.html
+++ b/html/tools.html
@@ -24,6 +24,7 @@
         </ul>
         </div>
         <div class="authButtons">
+            <a href="profile.html" id="userData"></a>
             <a href="login.html" class="authButton">login</a>
             <a href="signup.html" class="authButton">signup</a>
         </div>
@@ -56,6 +57,6 @@
             </div>
         </div>
     </div>
-  
+    <script src="../js/tools.js"></script>
 </body>
 </html>
