added workplace page
- added recording feature
-intial design of workplace implemented

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="introSection">
         <div id="introText">
         <h1 id="mainHeader">Facing Issues with your presentations?</h1>
-        <h1 id="detailedHeader">Your are not alone. Studies show that almost 77% of people all around the world suffer from Fear of public speaking.</h1>
+        <h1 id="detailedHeader">You are not alone. Studies show that almost 77% of people all around the world suffer from Fear of public speaking.</h1>
     </div>
     <div >
         <img src="resources/svgs/stressed.svg" alt="stressed" id="stressed">
