fixed issues with recording
added two sections to workplace
fixed issue record not sent
fixed issues response is not recieved

--- a/html/workplace.html
+++ b/html/workplace.html
@@ -11,8 +11,9 @@
     <div class="workspace">
     <img src="../resources/svgs/back.svg" class="backButton">
     <div class="centeredRow"><img id="logo" src="../resources/svgs/logo.svg" alt="Website logo"></div>
-    <div class="timely" id="recordsBox">
-    
+    <div class="flexRow">
+    <div class="timely" id="recordsBox">Record Box <div class="notifier"><br>You currnetly have not recorded anyrthing in this session</div></div>
+    <div class="timely">Timely tool</div>
     </div>
     <div class="recorder">
         <div class="tools">
