--- a/html/workplace.html
+++ b/html/workplace.html
@@ -26,6 +26,7 @@
             <img src="../resources/svgs/startRecording.svg" alt="record button" class="recorderButtons noRec" id="record">
             <img src="../resources/svgs/stop.svg" alt="stop button" class="recorderButtons rec" id="stopRecord">
             <img src="../resources/svgs/pause.svg" alt="pause button" class="recorderButtons rec" id="pauseRecord">
+            <p id="recordCounter"></p>
         </div>
     </div>
 
