--- a/html/workplace.html
+++ b/html/workplace.html
@@ -12,7 +12,12 @@
     <img src="../resources/svgs/back.svg" class="backButton">
     <div class="centeredRow"><img id="logo" src="../resources/svgs/logo.svg" alt="Website logo"></div>
     <div class="flexRow">
-    <div class="timely" id="recordsBox">Record Box <div class="notifier"><br>You currnetly have not recorded anyrthing in this session</div></div>
+    <div class="timely" id="recordsBox">Record Box 
+        <div class="notifier"><br>You currnetly have not recorded anyrthing in this session</div>
+        <div id="Results">
+            
+        </div>
+    </div>
     <div class="timely">Timely tool <div id="addSection">
         <input placeholder="section Title" type="text" name="section" id="sectionTitle" class="timerInput">
         <input placeholder="time in minutess" type="number" name="time"  id="sectionTime" class="timerInput">  
@@ -25,8 +30,9 @@
         <div class="tools">
             <img src="../resources/svgs/startRecording.svg" alt="record button" class="recorderButtons noRec" id="record">
             <img src="../resources/svgs/stop.svg" alt="stop button" class="recorderButtons rec" id="stopRecord">
-            <img src="../resources/svgs/pause.svg" alt="pause button" class="recorderButtons rec" id="pauseRecord">
+            <!-- <img src="../resources/svgs/pause.svg" alt="pause button" class="recorderButtons rec" id="pauseRecord"> -->
             <p id="recordCounter"></p>
+
         </div>
     </div>
 
