Result page mapped data to it's place

--- a/html/result.html
+++ b/html/result.html
@@ -15,31 +15,31 @@
     <div class="fullText"></div>
     <div class="smallStats">
         <div class="smallStat">
-            <img src="../resources/svgs/metro.svg" alt="metronome">
+            <img src="../resources/svgs/fillers.svg" alt="fillers">
             <div>
                 <p>Fillers</p>
-                <p> N/A</p>
+                <p id="resFillers"> N/A</p>
             </div>
         </div>
         <div class="smallStat">
             <img src="../resources/svgs/metro.svg" alt="metronome">
             <div>
                 <p>Metronome</p>
-                <p> N/A</p>
+                <p id="resMetronome"> N/A</p>
             </div>
         </div>  
         <div class="smallStat">
-            <img src="../resources/svgs/metro.svg" alt="metronome">
+            <img src="../resources/svgs/timer.svg" alt="timer">
             <div>
                 <p>Time</p>
-                <p> N/A</p>
+                <p id="resultTime"> N/A</p>
             </div>
         </div>
         <div class="smallStat">
-            <img src="../resources/svgs/metro.svg" alt="metronome">
+            <img src="../resources/svgs/target.svg" alt="target">
             <div>
                 <p>Target time</p>
-                <p> N/A</p>
+                <p  id="trgTime"> N/A</p>
             </div>
         </div>
      
