added upload function
upload audio from pc

--- a/html/result.html
+++ b/html/result.html
@@ -44,8 +44,10 @@
         </div>
      
     </div>
-    
+    <div class="resultStats">
     <div id="chart_div"></div>
+    <div id="sentence"></div>
+    </div>
     <script type="text/javascript" src="../js/result.js"></script>
     </body>
     </html>
