--- a/html/workplace.html
+++ b/html/workplace.html
@@ -27,6 +27,10 @@
     </div>
     </div>
     <div class="recorder">
+        <div>
+            <input type="file" id="file">
+            <button id="upload">Upload</button>
+        </div>
         <div class="tools">
             <img src="../resources/svgs/startRecording.svg" alt="record button" class="recorderButtons noRec" id="record">
             <img src="../resources/svgs/stop.svg" alt="stop button" class="recorderButtons rec" id="stopRecord">
