--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    
     <title>addemly</title>
 </head>
 <body>
@@ -24,6 +25,7 @@
         </ul>
         </div>
         <div class="authButtons">
+            <a href="profile.html" id="userData"></a>
             <a href="html/login.html" class="authButton">login</a>
             <a href="html/signup.html" class="authButton">signup</a>
         </div>
@@ -82,5 +84,6 @@
             </div>
         </div>
     </section> 
+    <script src="/js/checkLoggedIn.js"></script>
 </body>
 </html>
