--- a/html/profile.html
+++ b/html/profile.html
@@ -10,7 +10,9 @@
     <header>
       <div>
           <img id="logo"  style="margin: 0;" src="../resources/svgs/logo.svg" alt="logo">
-    </div></header>
+    </div>
+    <p id="logoutButton" >logout</p>
+</header>
     <div class="profileContainer">
         <div>
         <li class="active" id="editProfile">Edit Profile</li>
