--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
         </div>
         <div class="authButtons">
-            <a href="profile.html" id="userData"></a>
+            <a href="../html/profile.html" id="userData"></a>
             <a href="html/login.html" class="authButton">login</a>
             <a href="html/signup.html" class="authButton">signup</a>
         </div>
