--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
                     in machine learning and science of public speaking
                     to enable you to give better presentations.
                 </p>
-                <a href="html/aboutus.html" class="authButton darkened">Learn More</a>
+                <div class="flexRow">
+                <a href="html/aboutus.html" class="authButton darkened" style="font-size: 0.8rem;">Learn More</a>
+                <a href="html/tips.html" class="authButton" style="font-size: 0.8rem;">Tips and Tricks</a>
+                </div>
             </div>
 
         </div>
